--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -1,7 +1,3 @@
-.parent {
-  height: 100vh;
-}
-
 .container {
   position: relative;
   display: flex;
@@ -10,7 +6,7 @@
 }
 
 .imgOverlay {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.4);
   position: absolute;
   top: 0;
   right: 0;
@@ -28,7 +24,7 @@
 }
 
 .navContainer {
-  position: absolute;
+  width: 100%;
   z-index: 10;
   display: flex;
   align-items: center;
@@ -42,7 +38,7 @@
   z-index: 5;
   width: 100%;
   max-width: 1500px;
-  padding: 5rem;
+  padding: 15rem 0rem;
 }
 
 .actualContent {
@@ -53,9 +49,10 @@
   gap: 3rem;
   border-radius: 15px;
   padding: 2rem;
-  border: 1px solid var(--umber);
-  flex: 1;
   will-change: transform, opacity;
+  z-index: 999;
+  flex: 4;
+  width: 100%;
 }
 
 .right {
@@ -64,14 +61,13 @@
 
 .heading {
   color: var(--white);
-  margin-top: -1.5rem;
 }
 
 .copy {
   color: var(--white);
   font-size: 2rem;
   font-family: var(--RaptorMonoMedium);
-  /* width: 90%; */
+  width: 90%;
 }
 
 .btnContainer {
@@ -85,14 +81,9 @@
     justify-content: center;
   }
 
-  .heading {
+  .heading,
+  .copy {
     text-align: center;
-  }
-
-  .btnContainer {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    width: 100%;
   }
 
   .actualContent {
@@ -108,6 +99,10 @@
   .navContainer {
     top: -36px;
   }
+
+  .copy {
+    width: 100%;
+  }
 }
 
 @media screen and (max-width: 568px) {
@@ -116,6 +111,22 @@
   } */
 
   .content {
-    padding: 2rem;
+    padding: 12rem 0rem;
+  }
+
+  .actualContent {
+    align-items: flex-start;
+    justify-content: flex-start;
+  }
+
+  .heading,
+  .copy {
+    text-align: left;
+  }
+
+  .btnContainer {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    width: 100%;
   }
 }
